fix: 765 - fix dropdown z-index

--- a/src/widgets/header/ui/dropdown/dropdown-wrapper.module.scss
+++ b/src/widgets/header/ui/dropdown/dropdown-wrapper.module.scss
@@ -57,7 +57,6 @@
     content: '';
 
     position: absolute;
-    z-index: 2;
     top: -4px;
     left: 0;
 
